--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt-autoprefixer": "~3.0.3",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-imagemin": "~0.9.4",
     "grunt-contrib-less": "~1.0.1",
     "grunt-contrib-uglify": "~0.9.1",
