--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "magnifica_rapid",
   "version": "0.1.0",
   "devDependencies": {
+    "autoprefixer-core": "^5.2.1",
     "grunt": "~0.4.5",
-    "grunt-autoprefixer": "~3.0.3",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.13.0",
@@ -12,6 +12,7 @@
     "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-grunticon": "^2.2.1",
+    "grunt-postcss": "^0.5.5",
     "grunt-svgmin": "~2.0.1",
     "grunt-webfont": "~0.5.4",
     "load-grunt-tasks": "~3.2.0"
